debug.txt
(venv) sick7@raspberrypi:~/SICK/SICK-Capstone/arduino_stuff/sec110_test $ ./upload.sh
==========================================
SEC110 Trigger Test - Upload Script
==========================================
Found Arduino at: /dev/ttyUSB0
Compiling and uploading sec110_test.ino...
/home/sick7/SICK/SICK-Capstone/arduino_stuff/sec110_test/sec110_test_single_pulse.ino:5:11: error: redefinition of 'const int OUTPUT_PIN'
 const int OUTPUT_PIN = 7;  // Pin to output clean signal (change as needed)
           ^~~~~~~~~~
/home/sick7/SICK/SICK-Capstone/arduino_stuff/sec110_test/sec110_test.ino:5:11: note: 'const int OUTPUT_PIN' previously defined here
 const int OUTPUT_PIN = 7;  // Pin to output clean signal (change as needed)
           ^~~~~~~~~~
/home/sick7/SICK/SICK-Capstone/arduino_stuff/sec110_test/sec110_test_single_pulse.ino: In function 'void setup()':
/home/sick7/SICK/SICK-Capstone/arduino_stuff/sec110_test/sec110_test_single_pulse.ino:8:6: error: redefinition of 'void setup()'
 void setup() {
      ^~~~~
/home/sick7/SICK/SICK-Capstone/arduino_stuff/sec110_test/sec110_test.ino:7:6: note: 'void setup()' previously defined here
 void setup() {
      ^~~~~
/home/sick7/SICK/SICK-Capstone/arduino_stuff/sec110_test/sec110_test_single_pulse.ino: In function 'void loop()':
/home/sick7/SICK/SICK-Capstone/arduino_stuff/sec110_test/sec110_test_single_pulse.ino:32:6: error: redefinition of 'void loop()'
 void loop() {
      ^~~~
/home/sick7/SICK/SICK-Capstone/arduino_stuff/sec110_test/sec110_test.ino:21:6: note: 'void loop()' previously defined here
 void loop() {
      ^~~~

Used platform Version Path
arduino:avr   1.8.6   /home/sick7/.arduino15/packages/arduino/hardware/avr/1.8.6
Error during build: exit status 1
ERROR: Arduino compilation failed.
